# python-package-tutorial

./: .gitignore  README.md  TERMINAL_EVIDENCE.txt  __init__.py  app.py  cleaning.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/cit411_utils/: inventory.py  weather.py
tests/: test_cit411_utils.py
