[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata  (PEP 621)
# ---------------------------------------------------------------------------
[project]
name            = "cit411_utils"
version         = "0.1.0"
description     = "CIT 411 Lab Utility Package — data cleaning, weather, and inventory helpers"
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"

keywords = [
    "cit411",
    "data-cleaning",
    "weather",
    "inventory",
    "utilities",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

# Runtime dependencies
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.1.0",
]

# Optional extras
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipython>=8.24.0",
]

[project.urls]
Homepage   = "https://github.com/iamwaqarjaved/cit411_utils"
Repository = "https://github.com/iamwaqarjaved/cit411_utils"
Issues     = "https://github.com/iamwaqarjaved/cit411_utils/issues"

# ---------------------------------------------------------------------------
# Setuptools config — tell it to find packages inside src/
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.black]
line-length    = 96
target-version = ["py312"]

[tool.ruff]
line-length = 96
select      = ["E", "F", "I", "UP"]
ignore      = ["E501"]

[tool.mypy]
python_version   = "3.12"
strict           = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --cov=cit411_utils --cov-report=term-missing"
